    The call to frescox also needs to be parallelized, but this requires 
    modifications to fresco. 

Version 3.26
1.  Fixed problem with nucleus(i)%nbin_em not being defined, leading to
    potential runaway writing of the EM strength parameters.
2.  Fixed error reading in and assigning E1 strength parameters from the
    "exp" evaluated data file. 

Version 3.27
1.  Sped up subrotuine Boost_frame by using intrinsic function matmul and
    aligning due loops to better use memory arrays.
2.  Fixed a bug in the E1 strength parameters where every other nucleus would
    not get assigned properly because the file was not closed before the
    subroutine returned.
3.  Fixed bug in subroutine calling fresco where the radius for the potential 
    inadvertantly used the projectile (A_target**(1/3) + A_proj**(1/3)). A_proj
    should only be used for alphas and heavier projectiles.This error was 
    introduced in 3.18 when the bypass subroutine was implemented.
4.  Minor fix to the MPI code: replaced variable mpi_error to ierr to avoid
    conflict with intrinsic and fixed an incorrect call to MPI_Bcast. Further
    integration with MPI will occur in 3.28.

Version 3.28
1.  Fixed MPI implementation

Version 3.29
1.  Fixed bugs in MPI implementation from transfer to Quartz for parallel loop
    over Monte Carlo sampling. Paralelization for the HF denominators and 
    primary decay are still in the works.
2.  Fixed unnecessary writes to screen during MPI runs
3.  Added option for "verbose_output y/n", If "y", then periodic updates to
    screen given during the run, e.g., current energy, and some stats on the
    run.
4.  Added option suppress outfile. Two mechanisms: 
    a. Calling option "file none" 
    b. Calling option "write_outfile y/n". Ans asnwer of "n" suppresses priting
       of the .out file even if the option "file faile_name" is given. 

Version 3.30
1.  Added MPI parallelization to subroutine HF_denominator()
