@@ -978,13 +978,11 @@ subroutine HF_denominator(icomp)
                 if(num_data >= 0)then
                    if(.not. allocated(nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%decay_prob))     &
                        allocate(nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%decay_prob(num_data))
-                   call MPI_Barrier(icomm,ierr)
                    call MPI_BCAST(nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%decay_prob, num_data,&
                                   MPI_REAL8, my_proc, icomm, ierr)
                    num_data = nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%num_decay
                    if(.not. allocated(nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%decay_list))     &
                        allocate(nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%decay_list(num_data))
-                   call MPI_Barrier(icomm,ierr)
                    call MPI_BCAST(nucleus(icomp)%bins(Ix_i,ip,n)%nuke_decay(ifi)%decay_list, num_data,&
                                   MPI_INTEGER, my_proc, icomm, ierr)
                end if
@@ -996,7 +994,10 @@ subroutine HF_denominator(icomp)
    call MPI_Barrier(icomm,ierr)
    num_data = 1
    call MPI_Allreduce(MPI_IN_PLACE, num_tot, num_data, MPI_INTEGER, MPI_SUM, icomm, ierr)
-   if(print_me)write(6,*)'Total number = ', num_tot
+   if(print_me)then
+      write(6,*)'Finished calculating the decay probabilities for ',nucleus(icomp)%Label
+      write(6,*)'Total number = ', num_tot
+   end if
 return
 end subroutine HF_denominator
 !
